--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/mewtwo.svg" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/pokemon-hollow" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/pokemon-solid" rel="stylesheet">
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
@@ -11,6 +16,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="./src/index.jsx"></script>
+    <script type="module" src="./src/Main.jsx"></script>
   </body>
 </html>
